--- a/portfolio.html
+++ b/portfolio.html
@@ -86,6 +86,10 @@
     <section id="connect-with-me">
       
       <h3>Connect With Me</h3>
+
+      <div class="divider">
+      <hr></hr>
+      </div>
       
       <a id="github" href="https://github.com/manneocampo" target="_blank"><img src="assets/images/github.png" height="50px" width="50px" alt="GitHub"></a>
 
