--- a/contact.html
+++ b/contact.html
@@ -10,25 +10,23 @@
 
 <body background="assets/images/cork-wallet.png">
 
-<div id="fixed">
-  <header>
+<div class="header">
+  <div>
   <h1 >Michelle</h1>
-  </header>
- </div>  
-  
-  <div id="absolute">
-    
-    <nav> 
+  </div>
+
+     <div class="nav"> 
       <ul>
         <li><a href="index.html">About</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a class="active" href="contact.html">Contact</a></li>
       </ul> 
-    </nav>
+    </div>
+</div>    
 
-  </div>
+ 
 
-<div class="container">
+<div class="container clearfix">
 
     <section id="main-bio"> <!--might need to change to main section so can have for this one too same css or 
     can just re-name and copy main-bio css-->
