--- a/portfolio.html
+++ b/portfolio.html
@@ -10,25 +10,23 @@
 
 <body background="assets/images/cork-wallet.png">
 
-<div id="fixed">
-  <header>
+<div class="header">
+  <div>
   <h1>Michelle</h1>
-  </header>
- </div>  
-  
-  <div id="absolute">
-    
-    <nav> 
+  </div>
+  <div class="nav"> 
       <ul>
         <li><a href="index.html">About</a></li>
         <li><a class="active" href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul> 
-    </nav>
+    </div>
 
-  </div>
+ </div>  
+  
 
-<div class="container" class="clearfix">
+
+<div class="container clearfix">
 
     <section id="main-bio">
 
