Added changes to style and index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body background="assets/images/cork-wallet.png">
-
+<div>
 <div class="header"> <!--took out id="fixed"-->
   <!-- <header> -->
   <div>
@@ -78,7 +78,8 @@
 
 <!-- <div>
 </div> -->
-
+<div class="push"></div>
+</div>
   <footer>
     &copy;Copyright 2017 Michelle Ocampo 
   </footer>
