--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body background="assets/images/cork-wallet.png">
-<div>
+<div class="wrapper">
 <div class="header"> <!--took out id="fixed"-->
   <!-- <header> -->
   <div>
@@ -63,7 +63,7 @@
           
           <h3>Connect With Me</h3>
 
-          <div class="divider">
+          <div class="divider-side">
           <hr></hr>
           </div>
           
