added changes to style, contact, index, portfolio

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body background="assets/images/cork-wallet.png">
 <div class="wrapper">
 <div class="header">
-  <div>
+  <div class="name">
   <h1 >Michelle</h1>
   </div>
 
