--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="wrapper">
 <div class="header"> <!--took out id="fixed"-->
   <!-- <header> -->
-  <div>
+  <div class="name">
   <h1>Michelle</h1>
   </div>
   <!-- </header> -->
